crates/math-core/tests/snapshots/error_test__unexpected_limits.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\text{hello}\\limits_0^1"
---
Error: Got "\limits", which may only appear after \int, \sum, ....
   ╭─[ <input>:1:13 ]
   │
 1 │ \text{hello}\limits_0^1
   │             ───┬───  
   │                ╰───── may only appear after \int, \sum, ...
───╯
